--- a/src/components/EditAircraftDialog.css
+++ b/src/components/EditAircraftDialog.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   width: 65vw;
+  height: 90vh;
   position: relative;
   margin-right: 10px;
 }
@@ -20,7 +21,8 @@
 }
 
 .air-photo div img {
-  width: 100%;
+  width: inherit;
+  height: inherit;
   object-fit: scale-down;
 }
 
@@ -37,7 +39,6 @@
 .force {
   display: flex;
   flex-direction: row;
-
 }
 
 .force div {
