--- a/src/components/EditAircraftDialog.css
+++ b/src/components/EditAircraftDialog.css
@@ -20,6 +20,11 @@
   margin: 5px 5px 5px 0px;
 }
 
+.air-photos-control button:last-child {
+  margin-left: auto;
+  margin-right: 15px;
+}
+
 .air-photo div img {
   width: inherit;
   height: inherit;
