--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  padding: 0;
+  margin: 0;
 }
 
-.filter-row * {
-  margin-right: 10px;
-}
