--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  overflow-x: hidden;
+
   padding: 0;
   margin: 0;
 }
